fix top text align

--- a/Alpha/css/style.css
+++ b/Alpha/css/style.css
@@ -69,8 +69,9 @@ p#welcomeText {
   /*letter-spacing: 1px;*/
 }
 #slogan {
+  padding-left: 240px;
   margin: 0 auto;
-  width: 80%;
+  width: 100%;
   height: 44px;
   -webkit-animation: fadeIn 2s;
   -moz-animation: fadeIn 2s;
@@ -82,13 +83,10 @@ p#welcomeText {
 /* ===[ Navigation Bar ]=== */
 div#navigationBar {
   width: 100%;
-  height: 50px;
-  /*box-shadow: 1px 2px 5px #000000;*/
-  background: url(../img/top-bar.png) no-repeat center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  height: 52px;
+   margin: 0 auto;
+  box-shadow: 1px 2px 5px #000000;
+  background: url(../img/top-bar.png) no-repeat center ;
 }
 div#navigationBar ul {  list-style: none }
 div#navigationBar li {
